[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Joshua", email = "106414968+ReAXET@users.noreply.github.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "sqlmodel>=0.0.14",
    "rich>=13.7.0",
    "nba-api>=1.4.1",
    "pyarrow>=14.0.2",
    "polars>=0.20.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
